bobcat (2.23.00)

  * Added TemStream creating a temporary fstream

  * Added member int beyondDashes() returning the index of the first argument
    beyond a -- argument (or -1)

  * Arg now using the Bridge Design Pattern as well. Unfortunately, this once
    requires recompilation of all programs using Arg. 


bobcat (2.22.00)

  * Repaired bug in ArgConfig: following load() options in the config. file
    were (sometimes) not found.

  * ArgConfig option specifications may now have an optional : appended to
    them.

  * ConfigFile (and ArgConfig) may use \# in configuration files to specify a
    literal #. The \ is removed from the configuration line.

  * Code-cleanup of ArgConfig, adapted argconfig/driver's build script and
    provided an example config file.

  * Added missing parameters to ArgConfig's constructors in its man-page.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 16 Apr 2012 11:50:40 +0200

bobcat (2.21.01)

  * Replaced for_each calls by range-based for-loops

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 21 Jan 2012 16:52:00 +0100

bobcat (2.21.00)

  * Added new classes: Ranger and PtrIter, see their man-pages for details

  * Repaired a flaw in hash/hash, appearing with g++-4.7

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 07 Jan 2012 13:27:57 +0100

bobcat (2.20.02)

  * Using rang-based for loops where appropriate; minor cosmetic code changes

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 04 Jan 2012 13:20:29 +0100

bobcat (2.20.01)

  * Repaired bug in ReadLineBuf: object was incompletely initialized
    resulting in intermittendly occurring segfaults.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 04 Dec 2011 21:31:12 +0100

bobcat (2.20.00)

  * Redefined the implementations of the templates in bobcat/binops.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 03 Nov 2011 18:42:27 +0100

bobcat (2.19.01)

  * Repaired bug in BigInt::isqrt

  * BigInt's destructor called BN_clear, but should have called BN_free.