@@ -1,8 +1,9 @@
 #include "argconfig.ih"
 
-ArgConfig::const_RE_iterator ArgConfig::longConfigOpt(string const &longOpt)
+pair<ArgConfig::const_RE_iterator, ArgConfig::const_RE_iterator>
+        ArgConfig::longConfigOpt(string const &longOpt)
 {
     string pattern = "^\\s*" + longOpt + ":?(\\s|$)";
 
-    return beginRE(pattern);
+    return beginEndRE(pattern);
 }
