@@ -2,7 +2,7 @@
 
 size_t ArgConfig::option(int optChar)
 {
-    auto begin = findLongOption(optChar);
+    auto iterators = findLongOption(optChar);
 
-    return Arg::option(optChar) + (endRE() - begin);
+    return Arg::option(optChar) + (iterators.second - iterators.first);
 }
