@@ -3,9 +3,9 @@
 pair<ConfigFile::const_RE_iterator, ConfigFile::const_RE_iterator>
     ConfigFile::beginEndRE(std::string const &re)
 {
-    const_RE_iterator begin = beginRE(re);
+    auto begin = d_ptr->beginRE(re);
 
-    pair<const_RE_iterator, const_RE_iterator> ret(begin, endRE());
+    pair<const_RE_iterator, const_RE_iterator> ret(begin, d_ptr->endRE());
 
     return ret;
 }
