@@ -1,0 +1,6 @@
+#include "configfile.ih"
+
+ConfigFile::~ConfigFile()
+{
+    delete d_ptr;
+}
