@@ -4,7 +4,13 @@
 //                   trimmed text following key. initial ws before
 //                   key should not be specified: skipped by findKeyTail.
 
-string ConfigFile::findKeyTail(string const &keyPattern, size_t count)
+string ConfigFile__::findKeyTail(string const &keyPattern, size_t count)
 {
     return searchFor("^\\s*" + keyPattern + "\\s+(.*)\\s*$", count);
 }
+
+string ConfigFile::findKeyTail(string const &keyPattern, size_t count)
+{
+    return d_ptr->findKeyTail(keyPattern, count);
+}
+
