@@ -1,6 +1,6 @@
 #include "configfile.ih"
 
-bool ConfigFile::hasContent(string const &line)
+bool ConfigFile__::hasContent(string const &line)
 {
     return (line.find_first_not_of(" \t") != string::npos);
 }   
