@@ -1,0 +1,12 @@
+#include "configfile.ih"
+
+void ConfigFile__::setCommentHandling(Comment type)
+{
+    d_rmComment = type == RemoveComment;
+}
+
+void ConfigFile::setCommentHandling(Comment type)
+{
+    d_ptr->setCommentHandling(type);
+}
+
