@@ -5,9 +5,13 @@ bobcat (2.23.00)
   * Added member int beyondDashes() returning the index of the first argument
     beyond a -- argument (or -1)
 
-  * Arg now using the Bridge Design Pattern as well. Unfortunately, this once
-    requires recompilation of all programs using Arg. 
+  * Arg/ConfigFile now use the Bridge Design Pattern. Note that this requires 
+    (only once) all programs using Arg, ConfigFile or ArgConfig to be
+    recompiled.  
 
+  * Replacing std::map by std::unordered_map (cf. release 2.13.00) with Arg
+    (and ArgConfig) is incorrect, since the ordering is used by these
+    classes. Reinstalled the use of std::map for these classes.
 
 bobcat (2.22.00)
 
